--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 </head>
 <body>
   <div class="container">
-    <img src="aurora-logo.png" alt="Aurora Labs Media Logo" class="logo" />
+  <!-- New working logo -->
+<img src="https://i.imgur.com/b2dGgWS.png" alt="Ava Rae Construction Logo" style="max-width: 200px;" />
     <h1>Coming Soon</h1>
     <p>
       Aurora Labs Media is currently building the future of AI models and immersive fan experiences. Stay tuned.
