--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
   <div class="container">
   <!-- New working logo -->
-<img src="https://i.imgur.com/b2dGgWS.png" alt="Ava Rae Construction Logo" style="max-width: 200px;" />
+<img src="ava-logo.png" alt="Ava Rae Construction Logo" style="max-width: 200px;" />
     <h1>Coming Soon</h1>
     <p>
       Aurora Labs Media is currently building the future of AI models and immersive fan experiences. Stay tuned.
